--- a/test.html
+++ b/test.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github New Repository Test</title>
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1280px-Flag_of_Bangladesh.svg.png" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h2>My third repo is not index.html</h2>
+    <h1>I love <span id="green-text">Bangl</span><span id="red-text">adesh</span>.</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1280px-Flag_of_Bangladesh.svg.png" alt="Flag of Bangladesh">
 </body>
 </html>
