--- a/test.html
+++ b/test.html
@@ -12,5 +12,7 @@
     <h2>My third repo is not index.html</h2>
     <h1>I love <span id="green-text">Bangl</span><span id="red-text">adesh</span>.</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Flag_of_Bangladesh.svg/1280px-Flag_of_Bangladesh.svg.png" alt="Flag of Bangladesh">
+    <h1 id="blog-title">Become a React Developer</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis fuga officia, optio voluptatibus quis inventore nesciunt ex tempora, atque sint aliquam repellat nulla in velit.</p>
 </body>
 </html>
